# Practica-PLN

./: .gitignore  EDA.ipynb  HopeEXP_Test_unlabeled.jsonl  LICENSE  README.md  predict_task_b_emotion.py  predict_task_c_spans.py  requirements.txt  run_model_sweep.py  task_a_hope.ipynb  task_b_emotion.ipynb  task_c_spans.ipynb  task_d_roles.ipynb  train_task_b_emotion.py  train_task_c_spans.py
Fine-Tuning/: README.md
LLMs/: README.md  __init__.py  client.py  config.py  postprocess.py  prompts.py  run_inference.py
outputs/: experiment_config.json  submission_task_a.json  submission_task_b.json
outputs/task_c_spans_notebook/: experiment_config.json  postprocess_tuning_results.csv  submission_task_c_notebook.json  training_history.json
outputs/task_c_spans_notebook/model_comparison/: model_comparison.csv
shared/: __init__.py  dataset.py  eda.py  schemas.py
src/: data_utils.py  dataset.py  metrics.py  model.py  pipeline_inference.py  span_experiments.py  span_model.py  span_utils.py  trainer.py
src/shared/: __init__.py  dataset.py  eda.py  schemas.py
task_d_roles/: hyper_parameters.py  pyproject.toml  train.py
